deployfolder/objects/credit_application__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Credit Application</label>
    <fields>
        <fullName>Application_Json__c</fullName>
        <label>Application Json</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorization__c</fullName>
        <label>Authorization</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bearer__c</fullName>
        <label>Bearer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Type__c</fullName>
        <label>Content-Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Point__c</fullName>
        <label>End Point</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>httpMethod__c</fullName>
        <label>Http Method</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Put_Method__c</fullName>
        <label>Put Method</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>send_email__c</fullName>
        <label>send-email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>